; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeCurrentFromZiplist.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeCurrentFromZiplist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32 }

@OBJ_ENCODING_ZIPLIST = common dso_local global i64 0, align 8
@OBJ_HASH_KEY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hashTypeCurrentFromZiplist(%struct.TYPE_3__* %0, i32 %1, i8** %2, i32* %3, i64* %4) #0 {
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8** %2, i8*** %8, align 8
  store i32* %3, i32** %9, align 8
  store i64* %4, i64** %10, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @OBJ_ENCODING_ZIPLIST, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @serverAssert(i32 %17)
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* @OBJ_HASH_KEY, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %33

23:                                               ; preds = %5
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = load i8**, i8*** %8, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = load i64*, i64** %10, align 8
  %30 = call i32 @ziplistGet(i32 %26, i8** %27, i32* %28, i64* %29)
  store i32 %30, i32* %11, align 4
  %31 = load i32, i32* %11, align 4
  %32 = call i32 @serverAssert(i32 %31)
  br label %43

33:                                               ; preds = %5
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 8
  %37 = load i8**, i8*** %8, align 8
  %38 = load i32*, i32** %9, align 8
  %39 = load i64*, i64** %10, align 8
  %40 = call i32 @ziplistGet(i32 %36, i8** %37, i32* %38, i64* %39)
  store i32 %40, i32* %11, align 4
  %41 = load i32, i32* %11, align 4
  %42 = call i32 @serverAssert(i32 %41)
  br label %43

43:                                               ; preds = %33, %23
  ret void
}

declare dso_local i32 @serverAssert(i32) #1

declare dso_local i32 @ziplistGet(i32, i8**, i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
